erDiagram
    TENANT ||--o{ ORGANIZATION_UNIT : has
    ORGANIZATION_UNIT ||--o{ WAREHOUSE : manages
    ORGANIZATION_UNIT ||--o{ ACCOUNT : owns
    
    PARTY ||--o{ SALE_ORDER : places
    PARTY ||--o{ PURCHASE_ORDER : supplies
    PARTY ||--o{ PARTY_CONTACT : has

    PRODUCT ||--o{ PRODUCT_VARIANT : defines
    PRODUCT_VARIANT ||--o{ STOCK_ITEM : tracks
    
    WAREHOUSE ||--o{ WAREHOUSE_LOCATION : contains
    WAREHOUSE_LOCATION ||--o{ STOCK_ITEM : holds

    PURCHASE_ORDER ||--o{ GOODS_RECEIPT : receives
    GOODS_RECEIPT ||--o{ STOCK_MOVEMENT : triggers_inbound
    
    SALE_ORDER ||--o{ SHIPMENT : fulfills
    SHIPMENT ||--o{ STOCK_MOVEMENT : triggers_outbound
    
    STOCK_MOVEMENT }o--|| STOCK_ITEM : modifies
    
    SALE_ORDER ||--o{ SALE_INVOICE : bills
    PURCHASE_ORDER ||--o{ PURCHASE_INVOICE : billed_by
    
    SALE_INVOICE ||--o{ JOURNAL_ENTRY : posts_to
    PURCHASE_INVOICE ||--o{ JOURNAL_ENTRY : posts_to
    
    ACCOUNT ||--o{ JOURNAL_ENTRY_LINE : categorizes
    JOURNAL_ENTRY ||--o{ JOURNAL_ENTRY_LINE : contains
    FISCAL_PERIOD ||--o{ JOURNAL_ENTRY : closes

    AIDC_IDENTIFIER }o--|| PRODUCT_VARIANT : identifies
    AIDC_IDENTIFIER }o--|| STOCK_ITEM : identifies_serial
    AIDC_IDENTIFIER }o--|| WAREHOUSE_LOCATION : identifies